# structures25

./: .flake8  .gitignore  .pre-commit-config.yaml  CITATION.cff  Makefile  README.md  REPLICATION_GUIDE.md  denop.ipynb  environment.yaml  environment_cpu.yaml  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: code-quality.yaml  docs.yml  test.yml
configs/datagen/: config.yaml
configs/datagen/dataset/: misc_xyz.yaml  qm9.yaml  qmugs_30.yaml  qmugs_bin.yaml  qmugs_bin0.yaml  qmugs_large_bins.yaml  two_electron.yaml
configs/datagen/hydra/: default.yaml
configs/datagen/label_src/: ks_iterations.yaml
configs/datagen/preset/: qm9_perturbed_fock.yaml  qmugs_bin0_perturbed_fock.yaml  qmugs_large_bins.yaml
configs/ml/: natural_reparametrization.yaml  statistics.yaml  train.yaml
configs/ml/callbacks/: custom_scalars.yaml  default.yaml  log_gradient_norm.yaml  matplotlib_figures.yaml  mesh_logging.yaml  model_checkpoint.yaml  model_summary.yaml  print_overrides.yaml
configs/ml/data/: default.yaml  qm9.yaml  qm9_perturbed_fock.yaml  qm9subset.yaml  qmugs_bin0.yaml  qmugs_bin0_perturbed_fock.yaml  qmugs_bin0_qm9.yaml  qmugs_bin0_qm9_perturbed_fock.yaml  qmugs_large_val.yaml  rotated_ethanol.yaml  two_electron.yaml
configs/ml/extras/: default.yaml
configs/ml/hydra/: default.yaml
configs/ml/logger/: tensorboard.yaml
configs/ml/model/: default.yaml  graphformer.yaml  graphformer_cutoff.yaml  graphformer_cutoff_hierarc_energies.yaml  graphformer_cutoff_hierarc_energies_tf.yaml  graphformer_cutoff_tf.yaml  graphformer_hierarc_energies.yaml  graphformer_hierarc_energies_tf.yaml  graphformer_small.yaml  graphformer_tf.yaml
configs/ml/paths/: default.yaml
configs/ml/trainer/: default.yaml  slurm.yaml  slurm_ddp.yaml
configs/ofdft/: ofdft.yaml  plot_ofdft.yaml
configs/ofdft/eval/: perturbed_label.yaml  qm9.yaml  qmugs.yaml
configs/ofdft/extras/: default.yaml
configs/ofdft/hydra/: default.yaml
configs/ofdft/optimizer/: adam.yaml  default.yaml  gradient_descent.yaml  gradient_descent_torch.yaml
docs/source/: about.rst  conf.py  index.rst  installation.rst  package_reference.rst  usage.rst
docs/source/_static/: theme_override.css
docs/source/_templates/: module_template.rst
mldft/api/: __init__.py  cli_ofdft.py  instantiate_from_args.py  setup.py
mldft/datagen/: __init__.py  generate_labels_dataset.py  kohn_sham_dataset.py  transform_dataset.py
mldft/datagen/datasets/: QMUGSLargeBins_Ids.txt  dataset.py  misc.py  qm9.py  qmugs.py
mldft/datagen/methods/: density_fitting.py  label_generation.py  save_labels_in_zarr_file.py
mldft/ml/: __init__.py  compute_dataset_statistics.py  train.py
mldft/ml/callbacks/: __init__.py  base.py  checkpoint.py  custom_scalars.py  image_logging.py  log_gradient_norm.py  mesh_logging.py  print_overrides_callback.py  sub_model_summary.py  timing.py
mldft/ml/data/: __init__.py  datamodule.py
mldft/ml/models/: __init__.py  mldft_module.py
mldft/ml/preprocess/: __init__.py  dataset_statistics.py
mldft/ofdft/: __init__.py  basis_integrals.py  callbacks.py  density_optimization.py  energies.py  functional_factory.py  initial_guess.py  libxc_functionals.py  ofstate.py  optimizer.py  plot_ofdft.py  run_density_optimization.py  torch_functionals.py
mldft/utils/: __init__.py  coeffs_to_grid.py  conversions.py  counter_file.py  create_custom_splits.py  create_dataset_splits.py  create_subset.py  cube_files.py  download.py  draw_molecule.py  einsum.py  environ.py  grids.py  instantiators.py  local_frames.py  lr_scheduling.py  molecules.py  multiprocess.py  omegaconf_resolvers.py  overlap_matrices.py  pdf_utils.py  pyscf_pretty_print.py  rich_utils.py  sad_guesser.py  sparse.py  utils.py  visualize_3d.py
mldft/utils/log_utils/: config_in_tensorboard.py  hydra_callbacks.py  logging_mixin.py  logging_utils.py
notebooks/tutorial/: tutorial_0_overview.ipynb  tutorial_1_datamodule.ipynb  tutorial_2_visualization.ipynb  tutorial_3_transforms.ipynb  tutorial_4_hydra_omegaconf.ipynb  tutorial_5_mldftlitmodel.ipynb  tutorial_6_density_optimization.ipynb
scripts/: check_density_fit.py
tests/: conftest.py
tests/datagen/: conftest.py  test_datasets.py  test_density_fitting.py  test_diis_summation.py  test_kohn_sham_dataset.py  test_ksdft_calculation.py  test_label_generation.py  test_save_labels_in_zarr_files.py  test_xyz_file_conversion.py
tests/ml/: conftest.py  test_atom_ref.py  test_basis_info.py  test_datamodule.py  test_dataset_statistics.py  test_dimension_wise_rescaling.py  test_g3d_layer.py  test_gbf_module.py  test_initial_guess_delta_module.py  test_loading.py  test_local_frames_module.py  test_loss_functions.py  test_mldft_module.py  test_natural_reparametrization.py  test_node_embedding.py  test_sad_guesser.py  test_shrink_gate_module.py  test_toy_net.py  test_train.py  test_training_metrics.py  test_transforms.py
tests/ofdft/: conftest.py  test_basis_integrals.py  test_callbacks.py  test_energies.py  test_even_tempered_basis.py  test_functional_factory.py  test_initial_guess.py  test_libxc_functionals.py  test_ofdft_plots.py  test_ofstate.py  test_run_density_optimization.py  test_torch_functionals.py
tests/utils/: test_coeffs_to_grid.py  test_einsum.py  test_grids.py  test_load_npz.py  test_load_xyz_file.py  test_local_frames.py  test_molecules.py  test_plot_density_slices.py  test_pyscf_pretty_print.py  test_sparse.py  test_visualization_3d.py
(+70 files in other folders)
